列表查询，返回 LinkedHashMap